--- a/vignettes/V4_models.Rmd
+++ b/vignettes/V4_models.Rmd
@@ -15,7 +15,7 @@ knitr::opts_chunk$set(message = FALSE, warning = FALSE)
 
 One of the design principles of `cxr` is to allow users to estimate parameters from their own models. `Cxr` already includes four families of well-known population dynamic models: Beverton-Holt (BH), Lotka-Volterra (LV), Ricker (RK), and Law-Watkinson (LW), all in their discrete time formulation (see the accompanying publication of `cxr` for formulation of these general families). Users can choose between these default families by setting the `model_family` argument to the acronym of the chosen model. In this vignette we show, step by step, how other user-defined models can be integrated in the package.
 
-First of all, a common feature of the families included is that they rely on a common set of parameters, namely `lambda`,`alpha` (separated in `alpha_intra` and `alpha_inter`), `lambda_cov`, and `alpha_cov`. For now, user-defined models within `cxr` must be restricted to these parameters. 
+First of all, a common feature of the families included is that they rely on a common set of parameters, namely `lambda`,`alpha` (separated in `alpha_intra` and `alpha_inter`), `lambda_cov`, and `alpha_cov`. For now, user-defined models within `cxr` must be restricted to these parameters. A detailed description of these parameters can be found in previous vignettes.
 
 Below we include the full R code of a model template that can be used directly into `cxr`. This template is also included as a stand-alone R file in the source files of the package (`cxr_model_template.R`), and here we first explain each section of it.
 
@@ -205,7 +205,7 @@ custom_fit <- cxr_pm_fit(data = custom_data, # assuming custom_data is already s
 
 If the function cannot find a model matching the provided 'model_family','alpha_form','lambda_cov_form', and 'alpha_cov_form', it will output a message and return NULL. On a final note, if you think your bright new model can be useful for fellow scientists, we encourage you to make a pull request for integrating it in the set of default model families included in `cxr`.
 
-There are several issues that you should have in mind when developing custom models, however. First, recall that numerical optimization methods may be bounded or unbounded. If your model does not return meaningful values for part of the parameter space defined by the hypervolume of parameter boundaries, bounded optimization methods (such as 'L-BFGS-B' or 'bobyqa') will fail. This is well exemplified by the discrete Lotka-Volterra model: 
+There are several issues that you should have in mind when developing custom models. First, recall that numerical optimization methods may be bounded or unbounded. If your model does not return meaningful values for part of the parameter space defined by the hypervolume of parameter boundaries, bounded optimization methods (such as 'L-BFGS-B' or 'bobyqa') will fail. This is well exemplified by the discrete Lotka-Volterra model: 
 
 $\lambda_i - \alpha_{ii}N_i - \alpha_{ij}Nj$
 
@@ -213,12 +213,14 @@ which can easily produce negative values and thus undefined log-likelihoods. The
 
 **Model-specific coexistence metrics**
 
-Among the coexistence metrics that can be calculated with `cxr`, four of them are model-specific, i.e. have different formulations depending on the underlying population dynamics model from which lambda and alpha values are obtained. These are:
+Among the coexistence metrics that can be calculated with `cxr`, five of them are model-specific, i.e. have different formulations depending on the underlying population dynamics model from which lambda and alpha values are obtained. These are:
 
+* average species fitness
 * demographic ratio
+* competitive response ratio
 * competitive ability
-* competitive effects and responses
-* species fitness
+* species fitness in the absence of niche differences
+
 
 All these have different formulations for different model families. Therefore, if you want to estimate coexistence metrics based on custom models, you should provide a full set of formulations for these metrics. Here we show their formulation for Beverton-Holt models, for reference. The supplementary material of Godoy and Levine (2014) and that of Hart et al. (2018) are good places to explore the mathematical underpinnings of these particularities.
 
@@ -250,7 +252,7 @@ pred <- lambda.part/ (1+ e.part*r.part )
 
 where each part potentially depends on neighbour densities and covariates.
 
-* species fitness:
+* species fitness in the absence of niche differences:
 
 ```{r eval=FALSE}
 BH_species_fitness <- function(lambda, competitive_response){
